tpParse.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On OBJECTS shift to state 1
-- On CLASS shift to state 127
-- On prog shift to state 143
-- On objet shift to state 144
-- On list(declBegin) shift to state 145
-- On declBegin shift to state 148
-- On classe shift to state 150
## Reductions:
-- On LBRACK
--   reduce production list(declBegin) ->

State 1:
## Known stack suffix:
## OBJECTS
## LR(1) items:
objet -> OBJECTS . TYPE option(bloc) IS blocDecl [ OBJECTS LBRACK CLASS ]
## Transitions:
-- On TYPE shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## OBJECTS TYPE
## LR(1) items:
objet -> OBJECTS TYPE . option(bloc) IS blocDecl [ OBJECTS LBRACK CLASS ]
## Transitions:
-- On LBRACK shift to state 3
-- On option(bloc) shift to state 70
-- On bloc shift to state 126
## Reductions:
-- On IS
--   reduce production option(bloc) ->

State 3:
## Known stack suffix:
## LBRACK
## LR(1) items:
bloc -> LBRACK . list(decl) IS list(instruction) RBRACK [ THIS SUPER RESULT RBRACK MINUS LPAREN LBRACK IS IF ID EOF ELSE DEF CSTE CONST ]
bloc -> LBRACK . list(instruction) RBRACK [ THIS SUPER RESULT RBRACK MINUS LPAREN LBRACK IS IF ID EOF ELSE DEF CSTE CONST ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On LBRACK shift to state 3
-- On IF shift to state 39
-- On ID shift to state 51
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On separated_nonempty_list(COMMA,ID) shift to state 55
-- On loption(separated_nonempty_list(COMMA,ID)) shift to state 56
-- On list(instruction) shift to state 60
-- On list(decl) shift to state 62
-- On instruction shift to state 66
-- On expr shift to state 45
-- On decl shift to state 68
-- On bloc shift to state 50
## Reductions:
-- On IS
--   reduce production list(decl) ->
-- On RBRACK
--   reduce production list(instruction) ->
-- On COLON
--   reduce production loption(separated_nonempty_list(COMMA,ID)) ->

State 4:
## Known stack suffix:
## THIS
## LR(1) items:
expr -> THIS . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> THIS

State 5:
## Known stack suffix:
## SUPER
## LR(1) items:
expr -> SUPER . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> SUPER

State 6:
## Known stack suffix:
## RESULT
## LR(1) items:
expr -> RESULT . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> RESULT

State 7:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 38
## Reductions:

State 8:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> LPAREN . TYPE expr RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On TYPE shift to state 9
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 36
## Reductions:

State 9:
## Known stack suffix:
## LPAREN TYPE
## LR(1) items:
expr -> LPAREN TYPE . expr RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 13
## Reductions:

State 10:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> ID

State 11:
## Known stack suffix:
## CSTE
## LR(1) items:
expr -> CSTE . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> CSTE

State 12:
## Known stack suffix:
## CONST
## LR(1) items:
expr -> CONST . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> CONST

State 13:
## Known stack suffix:
## LPAREN TYPE expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . DOT ID [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> LPAREN TYPE expr . RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . MINUS expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . TIMES expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . DIV expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . RELOP expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . AMP expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
## Transitions:
-- On TIMES shift to state 14
-- On RPAREN shift to state 35
-- On RELOP shift to state 23
-- On PLUS shift to state 25
-- On MINUS shift to state 29
-- On DOT shift to state 16
-- On DIV shift to state 27
-- On AMP shift to state 31
## Reductions:

State 14:
## Known stack suffix:
## expr TIMES
## LR(1) items:
expr -> expr TIMES . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr TIMES expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On DOT shift to state 16
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DIV COMMA ASSIGN AMP
--   reduce production expr -> expr TIMES expr

State 16:
## Known stack suffix:
## expr DOT
## LR(1) items:
expr -> expr DOT . ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr DOT . ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On ID shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## expr DOT ID
## LR(1) items:
expr -> expr DOT ID . LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr DOT ID . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On LPAREN shift to state 18
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> expr DOT ID

State 18:
## Known stack suffix:
## expr DOT ID LPAREN
## LR(1) items:
expr -> expr DOT ID LPAREN . loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On separated_nonempty_list(COMMA,expr) shift to state 19
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 20
-- On expr shift to state 22
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 19:
## Known stack suffix:
## separated_nonempty_list(COMMA,expr)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr)

State 20:
## Known stack suffix:
## expr DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr))
## LR(1) items:
expr -> expr DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) . RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On RPAREN shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## expr DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN
## LR(1) items:
expr -> expr DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> expr DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN

State 22:
## Known stack suffix:
## expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . DOT ID [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . PLUS expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . MINUS expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . TIMES expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . DIV expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . RELOP expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
expr -> expr . AMP expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV COMMA AMP ]
separated_nonempty_list(COMMA,expr) -> expr . [ RPAREN ]
separated_nonempty_list(COMMA,expr) -> expr . COMMA separated_nonempty_list(COMMA,expr) [ RPAREN ]
## Transitions:
-- On TIMES shift to state 14
-- On RELOP shift to state 23
-- On PLUS shift to state 25
-- On MINUS shift to state 29
-- On DOT shift to state 16
-- On DIV shift to state 27
-- On COMMA shift to state 33
-- On AMP shift to state 31
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,expr) -> expr

State 23:
## Known stack suffix:
## expr RELOP
## LR(1) items:
expr -> expr RELOP . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## expr RELOP expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr RELOP expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On TIMES shift to state 14
-- On PLUS shift to state 25
-- On MINUS shift to state 29
-- On DOT shift to state 16
-- On DIV shift to state 27
-- On AMP shift to state 31
## Reductions:
-- On THEN SEMICOLON RPAREN COMMA ASSIGN
--   reduce production expr -> expr RELOP expr

State 25:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## expr PLUS expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr PLUS expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On TIMES shift to state 14
-- On DOT shift to state 16
-- On DIV shift to state 27
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP PLUS MINUS COMMA ASSIGN AMP
--   reduce production expr -> expr PLUS expr

State 27:
## Known stack suffix:
## expr DIV
## LR(1) items:
expr -> expr DIV . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## expr DIV expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr DIV expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On DOT shift to state 16
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DIV COMMA ASSIGN AMP
--   reduce production expr -> expr DIV expr

State 29:
## Known stack suffix:
## expr MINUS
## LR(1) items:
expr -> expr MINUS . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## expr MINUS expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr MINUS expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On TIMES shift to state 14
-- On DOT shift to state 16
-- On DIV shift to state 27
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP PLUS MINUS COMMA ASSIGN AMP
--   reduce production expr -> expr MINUS expr

State 31:
## Known stack suffix:
## expr AMP
## LR(1) items:
expr -> expr AMP . expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## expr AMP expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr AMP expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On TIMES shift to state 14
-- On DOT shift to state 16
-- On DIV shift to state 27
## Reductions:
-- On THEN SEMICOLON RPAREN RELOP PLUS MINUS COMMA ASSIGN AMP
--   reduce production expr -> expr AMP expr

State 33:
## Known stack suffix:
## expr COMMA
## LR(1) items:
separated_nonempty_list(COMMA,expr) -> expr COMMA . separated_nonempty_list(COMMA,expr) [ RPAREN ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On separated_nonempty_list(COMMA,expr) shift to state 34
-- On expr shift to state 22
## Reductions:

State 34:
## Known stack suffix:
## expr COMMA separated_nonempty_list(COMMA,expr)
## LR(1) items:
separated_nonempty_list(COMMA,expr) -> expr COMMA separated_nonempty_list(COMMA,expr) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,expr) -> expr COMMA separated_nonempty_list(COMMA,expr)

State 35:
## Known stack suffix:
## LPAREN TYPE expr RPAREN
## LR(1) items:
expr -> LPAREN TYPE expr RPAREN . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> LPAREN TYPE expr RPAREN

State 36:
## Known stack suffix:
## LPAREN expr
## LR(1) items:
expr -> LPAREN expr . RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . DOT ID [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . PLUS expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . MINUS expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . TIMES expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . DIV expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . RELOP expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
expr -> expr . AMP expr [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMP ]
## Transitions:
-- On TIMES shift to state 14
-- On RPAREN shift to state 37
-- On RELOP shift to state 23
-- On PLUS shift to state 25
-- On MINUS shift to state 29
-- On DOT shift to state 16
-- On DIV shift to state 27
-- On AMP shift to state 31
## Reductions:

State 37:
## Known stack suffix:
## LPAREN expr RPAREN
## LR(1) items:
expr -> LPAREN expr RPAREN . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP
--   reduce production expr -> LPAREN expr RPAREN

State 38:
## Known stack suffix:
## MINUS expr
## LR(1) items:
expr -> expr . DOT ID LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DOT ID [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> MINUS expr . [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . RELOP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
expr -> expr . AMP expr [ TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DOT DIV COMMA ASSIGN AMP ]
## Transitions:
-- On DOT shift to state 16
## Reductions:
-- On TIMES THEN SEMICOLON RPAREN RELOP PLUS MINUS DIV COMMA ASSIGN AMP
--   reduce production expr -> MINUS expr

State 39:
## Known stack suffix:
## IF
## LR(1) items:
instruction -> IF . expr THEN instruction ELSE instruction [ THIS SUPER RESULT RBRACK MINUS LPAREN LBRACK IF ID ELSE CSTE CONST ]
## Transitions:
-- On THIS shift to state 4
-- On SUPER shift to state 5
-- On RESULT shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On ID shift to state 10
-- On CSTE shift to state 11
-- On CONST shift to state 12
-- On expr shift to state 40
## Reductions:
